images et possibilité de refaire un nouveau board

--- a/web-client/src/components/game/cell/lib/Cell.css
+++ b/web-client/src/components/game/cell/lib/Cell.css
@@ -3,13 +3,7 @@ div {
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.56);
     border-radius: 2px;
-    background: repeating-radial-gradient(
-            circle,
-            #e0eff9,
-            #e0eff9 5px,
-            #e5f5ff 5px,
-            #e5f5ff 10px
-    );
+    background: #e0eff9;
     display: flex;
     justify-content: center;
     align-items: center;
